--- a/IORoot/index.mdx
+++ b/IORoot/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/IORoot"
 slug:  "/projects/ioroot"
 date:  "2020-07-16"
-title: "IORoot"
+title: "IORoot Github Profile"
 icon:  "github"
 desc:  "My Github profile with a github action that automatically creates a list of my repos."
 ---
