--- a/Obsidian-Monokai/index.mdx
+++ b/Obsidian-Monokai/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/Obsidian-Monokai"
 slug:  "/projects/obsidian-monokai"
 date:  "2022-06-13"
-title: "Obsidian-Monokai"
+title: "Obsidian Monokai Theme"
 icon:  "obsidian"
 desc:  "A (very) clean and minimal Monokai code-colours based Obsidian theme."
 ---
