--- a/action__puppeteer--media/index.mdx
+++ b/action__puppeteer--media/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/action__puppeteer--media"
 slug:  "/projects/action__puppeteer--media"
 date:  "2021-08-17"
-title: "action__puppeteer--media"
-icon:  "shell"
+title: "Github Action puppeteer +Video record."
+icon:  "githubaction"
 desc:  "Github Action to run puppeteer with media/video capabilities. (Default downloaded chrome cannot use video files)"
 ---
 
