--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/blog"
 slug:  "/projects/blog"
 date:  "2022-05-20"
-title: "blog"
-icon:  "github"
-desc:  "Markdown content for gatsby"
+title: "The Blog"
+icon:  "mdx"
+desc:  "Markdown content source for IORoot.com"
 ---
 
 
