--- a/deploy__LABS/index.mdx
+++ b/deploy__LABS/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/deploy__LABS"
 slug:  "/projects/deploy__labs"
 date:  "2021-06-16"
-title: "deploy__LABS"
+title: "ParkourLabs.com"
 icon:  "githubactions"
-desc:  "labs.londonparkour.com deployment"
+desc:  "CI Wordpress Deployment to Server. DB, wp-content, config"
 ---
 
 
