--- a/deploy__PULSE/index.mdx
+++ b/deploy__PULSE/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/deploy__PULSE"
 slug:  "/projects/deploy__pulse"
 date:  "2021-08-23"
-title: "deploy__PULSE"
+title: "ParkourPulse.com"
 icon:  "githubactions"
-desc:  "PULSE website deploy through CI"
+desc:  "CI Wordpress Deployment to Server. DB, wp-content, config"
 ---
 
 
