--- a/examples__google-my-business/index.mdx
+++ b/examples__google-my-business/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/examples__google-my-business"
 slug:  "/projects/examples__google-my-business"
 date:  "2021-09-28"
-title: "examples__google-my-business"
+title: "Google-my-Business API examples"
 icon:  "php"
 desc:  "Example PHP scripts for Google My Business API v4.9"
 ---
