--- a/github__actions--WP-workflow-example/index.mdx
+++ b/github__actions--WP-workflow-example/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/github__actions--WP-workflow-example"
 slug:  "/projects/github__actions--wp-workflow-example"
 date:  "2020-11-30"
-title: "github__actions--WP-workflow-example"
+title: "CI WordPress deployment example"
 icon:  "githubactions"
 desc:  "A Github Action workflow to run WordPress, PHPUnit, MySQL and pull in a second private repo"
 ---
