--- a/latestversions-scraper/index.mdx
+++ b/latestversions-scraper/index.mdx
@@ -2,12 +2,10 @@
 repo: "https://github.com/IORoot/latestversions-scraper"
 slug:  "/projects/latestversions-scraper"
 date:  "2021-10-28"
-title: "latestversions-scraper"
+title: "Scraper for LatestVersions"
 icon:  "githubactions"
-desc:  "LatestVersions Scraper"
+desc:  "Scrape websites and repos for version numbers. Push to FaunaDB as graphQL."
 ---
-
-
 
 # Latest Versions Scraper
 
