--- a/latestversions-website/index.mdx
+++ b/latestversions-website/index.mdx
@@ -2,11 +2,10 @@
 repo: "https://github.com/IORoot/latestversions-website"
 slug:  "/projects/latestversions-website"
 date:  "2022-05-18"
-title: "latestversions-website"
+title: "latest-versions.netlify.app"
 icon:  "gatsby"
-desc:  "LatestVersions Website"
+desc:  "LatestVersions Website. Find a latest version of software."
 ---
-
 
 # Latest Versions Website.
 
