--- a/macos__colorpicker--app/index.mdx
+++ b/macos__colorpicker--app/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/macos__colorpicker--app"
 slug:  "/projects/macos__colorpicker--app"
 date:  "2021-07-18"
-title: "macos__colorpicker--app"
+title: "MacOS colorpicker"
 icon:  "apple"
-desc:  "🌈 Apple MacOS Colorpicker Panel shortcut"
+desc:  "🌈 Apple MacOS native Colorpicker shortcut. Open colorpicker like a normal application."
 ---
 
 
