--- a/neofetch/index.mdx
+++ b/neofetch/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/neofetch"
 slug:  "/projects/neofetch"
 date:  "2022-06-20"
 title: "neofetch"
-icon:  "shell"
+icon:  "iterm2"
 desc:  "🖼️  A command-line system information tool written in bash 3.2+"
 ---
 
