--- a/prometheus__grok--apache2/index.mdx
+++ b/prometheus__grok--apache2/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/prometheus__grok--apache2"
 slug:  "/projects/prometheus__grok--apache2"
 date:  "2019-10-29"
 title: "prometheus__grok--apache2"
-icon:  "shell"
+icon:  "prometheeus"
 desc:  "Grok_exporter yaml config files for Apache2 access and error logs. For use with Prometheus."
 ---
 
