--- a/scraper__instamancer/index.mdx
+++ b/scraper__instamancer/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/scraper__instamancer"
 slug:  "/projects/scraper__instamancer"
 date:  "2020-07-14"
-title: "scraper__instamancer"
+title: "Instagram Scraper"
 icon:  "typescript"
 desc:  "Scrape Instagram's API with Puppeteer"
 ---
