--- a/scripts__tools/index.mdx
+++ b/scripts__tools/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/scripts__tools"
 slug:  "/projects/scripts__tools"
 date:  "2020-08-12"
-title: "scripts__tools"
+title: "Scripts & Tools Installer"
 icon:  "iterm2"
-desc:  "Library of BASH and CLI scripts"
+desc:  "Install personal library of Brew, NPM, BASH scripts, .dotfiles, and other things. Profiled to specific machines."
 ---
 
 
