--- a/tailwind__variant--on/index.mdx
+++ b/tailwind__variant--on/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/tailwind__variant--on"
 slug:  "/projects/tailwind__variant--on"
 date:  "2021-05-30"
 title: "tailwind__variant--on"
-icon:  "tailwind"
+icon:  "tailwindcss"
 desc:  "🌬 A tailwind variant that allows you to select every X children of Y children."
 ---
 
