--- a/typora__notion-theme/index.mdx
+++ b/typora__notion-theme/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/typora__notion-theme"
 slug:  "/projects/typora__notion-theme"
 date:  "2020-08-10"
-title: "typora__notion-theme"
-icon:  "css"
-desc:  "My customisations for Typora to look a little more like Notion.so "
+title: "Typora Notion.so Theme"
+icon:  "css3"
+desc:  "My customisations for Typora to look a little more like thee Notion.so layout"
 ---
 
 
