--- a/visual-planner/index.mdx
+++ b/visual-planner/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/visual-planner"
 slug:  "/projects/visual-planner"
 date:  "2020-06-21"
 title: "visual-planner"
-icon:  "php"
+icon:  "googlecalendar"
 desc:  "Year-view wall planner for Google Calendar"
 ---
 
