--- a/wp-plugin__api-scraper/index.mdx
+++ b/wp-plugin__api-scraper/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__api-scraper"
 slug:  "/projects/wp-plugin__api-scraper"
 date:  "2019-10-28"
 title: "wp-plugin__api-scraper"
-icon:  "shell"
+icon:  "wordpress"
 desc:  "API Scraper Wordpress plugin that will allow you to get data from YouTube and output the results as you like."
 ---
 
