--- a/wp-plugin__pulse-chips/index.mdx
+++ b/wp-plugin__pulse-chips/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-plugin__pulse-chips"
 slug:  "/projects/wp-plugin__pulse-chips"
 date:  "2020-07-18"
 title: "wp-plugin__pulse-chips"
-icon:  "scss"
+icon:  "wordpress"
 desc:  "Chips shortcode for the parkourpulse pages."
 ---
 
