--- a/wp-theme__londonparkour--v4/index.mdx
+++ b/wp-theme__londonparkour--v4/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-theme__londonparkour--v4"
 slug:  "/projects/wp-theme__londonparkour--v4"
 date:  "2019-10-28"
 title: "wp-theme__londonparkour--v4"
-icon:  "scss"
+icon:  "wordpress"
 desc:  "Wordpress theme for LondonParkour. Uses _underscores."
 ---
 
