--- a/IORoot-Website/index.mdx
+++ b/IORoot-Website/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/IORoot-Website"
 slug:  "/projects/ioroot-website"
 date:  "2022-06-12"
-title: "IORoot-Website"
+title: "IORoot.com"
 icon:  "gatsby"
-desc:  "Gatsby Website for IORoot.com"
+desc:  "This site. Built with Gatsby, Github and Netlify. (and me)."
 ---
 
 
