--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/SVGencode"
 slug:  "/projects/svgencode"
 date:  "2022-06-05"
-title: "SVGencode"
+title: "SVGencode.com"
 icon:  "gatsby"
 desc:  "A simple tool to convert an SVG into different formats, ready for use in CSS and HTML."
 ---
