--- a/deploy__STAGING/index.mdx
+++ b/deploy__STAGING/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/deploy__STAGING"
 slug:  "/projects/deploy__staging"
 date:  "2021-04-07"
-title: "deploy__STAGING"
+title: "LondonParkour.com"
 icon:  "githubactions"
-desc:  "LondonParkour Staging wp-content, theme, plugins."
+desc:  "CI Wordpress Deployment to Server. DB, wp-content, config."
 ---
 
 
