--- a/macos__json2clr--convert/index.mdx
+++ b/macos__json2clr--convert/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/macos__json2clr--convert"
 slug:  "/projects/macos__json2clr--convert"
 date:  "2021-07-18"
-title: "macos__json2clr--convert"
+title: "MacOS .json to .clr converter"
 icon:  "apple"
 desc:  "🌈 Colour Palette .JSON to Apple .CLR converter."
 ---
