--- a/obsidian-releases/index.mdx
+++ b/obsidian-releases/index.mdx
@@ -2,11 +2,12 @@
 repo: "https://github.com/IORoot/obsidian-releases"
 slug:  "/projects/obsidian-releases"
 date:  "2022-06-13"
-title: "obsidian-releases"
+title: "Obsidian releases pull-request"
 icon:  "obsidian"
 desc:  "Community plugins list, theme list, and releases of Obsidian."
 ---
 
+> This is a fork. Created to supply a merge-request for my theme [https://github.com/IORoot/Obsidian-Monokai](https://github.com/IORoot/Obsidian-Monokai)
 
 ## About this repo
 
