--- a/run__lighthouse/index.mdx
+++ b/run__lighthouse/index.mdx
@@ -2,11 +2,10 @@
 repo: "https://github.com/IORoot/run__lighthouse"
 slug:  "/projects/run__lighthouse"
 date:  "2021-09-03"
-title: "run__lighthouse"
-icon:  "grafana"
+title: "Lighthouse on Crontab"
+icon:  "githubactions"
 desc:  "Runs Lighthouse against URLs - Saves to server."
 ---
-
 
 # Lighthouse Testing
 
