--- a/uploads__labs/index.mdx
+++ b/uploads__labs/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/uploads__labs"
 slug:  "/projects/uploads__labs"
 date:  "2021-06-18"
-title: "uploads__labs"
-icon:  "githubactions"
-desc:  "The image uploads folder for labs.londonparkour.com"
+title: "ParkourLabs.com Uploads."
+icon:  "github"
+desc:  "The image uploads folder for parkourlabs.com"
 ---
 
 
