--- a/uploads__londonparkour/index.mdx
+++ b/uploads__londonparkour/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/uploads__londonparkour"
 slug:  "/projects/uploads__londonparkour"
 date:  "2021-04-12"
-title: "uploads__londonparkour"
+title: "LondonParkour.com Uploads"
 icon:  "githubactions"
-desc:  "All the londonparkour.com image uploads so we can use CI"
+desc:  "The image uploads folder for londonparkour.com"
 ---
 
 
