--- a/workflow__puppeteer--demo/index.mdx
+++ b/workflow__puppeteer--demo/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/workflow__puppeteer--demo"
 slug:  "/projects/workflow__puppeteer--demo"
 date:  "2021-08-15"
-title: "workflow__puppeteer--demo"
+title: "Github Action Puppeteer Demo"
 icon:  "puppeteer"
 desc:  "Run Puppeteer scripts through github actions"
 ---
