--- a/latestversions-website/index.mdx
+++ b/latestversions-website/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/latestversions-website"
 slug:  "/projects/latestversions-website"
 date:  "2022-05-18"
-title: "latest-versions.netlify.app"
+title: "LatestVersions.com"
 icon:  "gatsby"
 desc:  "LatestVersions Website. Find a latest version of software."
 ---
