--- a/neofetch/index.mdx
+++ b/neofetch/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/neofetch"
 slug:  "/projects/neofetch"
 date:  "2022-06-20"
-title: "neofetch"
+title: "neofetch customised"
 icon:  "iterm2"
 desc:  "🖼️  A command-line system information tool written in bash 3.2+"
 ---
