--- a/prometheus__grok--apache2/index.mdx
+++ b/prometheus__grok--apache2/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/prometheus__grok--apache2"
 slug:  "/projects/prometheus__grok--apache2"
 date:  "2019-10-29"
-title: "prometheus__grok--apache2"
-icon:  "prometheeus"
-desc:  "Grok_exporter yaml config files for Apache2 access and error logs. For use with Prometheus."
+title: "Prometheus grok for apache logs"
+icon:  "prometheus"
+desc:  "Grok-exporter yaml config files for Apache2 access and error logs. For use with Prometheus."
 ---
 
 
