--- a/uploads__labs/index.mdx
+++ b/uploads__labs/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/uploads__labs"
 slug:  "/projects/uploads__labs"
 date:  "2021-06-18"
 title: "ParkourLabs.com Uploads."
-icon:  "github"
+icon:  "githubactions"
 desc:  "The image uploads folder for parkourlabs.com"
 ---
 
