--- a/wp-plugin__REST--labs/index.mdx
+++ b/wp-plugin__REST--labs/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__REST--labs"
 slug:  "/projects/wp-plugin__rest--labs"
 date:  "2021-03-04"
-title: "WP-Plugin ParkourLabs.com REST API"
+title: "ParkourLabs REST API [Plugin]"
 icon:  "wordpress"
 desc:  "Access the REST Interface to parkourlabs.com and pull Images"
 ---
@@ -20,7 +20,6 @@ desc:  "Access the REST Interface to parkourlabs.com and pull Images"
 
 <p align="center">
     This is a small plugin to utilise the ParkourLabs.com REST API custom post types and their images. The provided shortcode will display a "stack" of images from those images. 
-    <a href="https://github.com/IORoot/wp-plugin__REST--labs"><strong>Explore the repo »</strong></a>
 </p>    
 </div>
 
@@ -203,6 +202,28 @@ Don't forget to give the project a star! Thanks again!
 ##  7. <a name='License'></a>License
 
 Distributed under the MIT License.
+
+MIT License
+
+Copyright (c) 2022 Andy Pearson
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
 
 <p align="right">(<a href="#top">back to top</a>)</p>
 
