--- a/wp-theme__londonparkour--v5/index.mdx
+++ b/wp-theme__londonparkour--v5/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-theme__londonparkour--v5"
 slug:  "/projects/wp-theme__londonparkour--v5"
 date:  "2021-04-12"
 title: "wp-theme__londonparkour--v5"
-icon:  "wordpress"
+icon:  "digitalocean"
 desc:  "Version5 Of LondonParkour"
 ---
 
