--- a/wp-plugin__acf--codemirror/index.mdx
+++ b/wp-plugin__acf--codemirror/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/wp-plugin__acf--codemirror"
 slug:  "/projects/wp-plugin__acf--codemirror"
 date:  "2020-09-29"
-title: "CodeMirror FOR ACF Textareas"
+title: "ACF Textarea CodeMirror"
 icon:  "wordpress"
-desc:  "Embed codemirror textarea fields for ACF"
+desc:  "Embed codemirror into textarea fields for ACF"
 ---
 
 <div id="top"></div>
@@ -42,7 +42,7 @@ desc:  "Embed codemirror textarea fields for ACF"
 
 ##  2. <a name='AboutTheProject'></a>About The Project
 
-Thi plugin does 3 things:
+This plugin does 3 things:
 
 1. Adds a codemirror instance to the textarea code boxes in ACF
 2. Gives shadows to table rows
@@ -59,7 +59,7 @@ This project was built with the following frameworks, technologies and software.
 
 * [ACF](https://www.advancedcustomfields.com/)
 * [CodeMirror](https://codemirror.net/)
-* [MterialIcons](https://materialdesignicons.com/)
+* [MaterialIcons](https://materialdesignicons.com/)
 * [PHP](https://php.net/)
 * [Wordpress](https://wordpress.org/)
 * [Composer](https://getcomposer.org/)
