--- a/wp-plugin__acf-options-import-export/index.mdx
+++ b/wp-plugin__acf-options-import-export/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/wp-plugin__acf-options-import-export"
 slug:  "/projects/wp-plugin__acf-options-import-export"
 date:  "2020-05-23"
-title: "ACF options importer/exporter"
+title: "ACF options importer & exporter"
 icon:  "wordpress"
-desc:  "Allows you to import and export ACF options directly from the database. Caution, this is very dangerous!"
+desc:  "Allows you to import and export ACF options directly from the database. CAUTION, this is very dangerous!"
 ---
 
 
