--- a/wp-plugin__admin--remove-comments/index.mdx
+++ b/wp-plugin__admin--remove-comments/index.mdx
@@ -84,7 +84,7 @@ No customisation required.
 
 ##  5. <a name='Troubleshooting'></a>Troubleshooting
 
-No troubleshooting.
+Use github issues for any troubleshooting problems.
 
 <p align="right">(<a href="#top">back to top</a>)</p>
 
