--- a/wp-plugin__admin-widgets/index.mdx
+++ b/wp-plugin__admin-widgets/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__admin-widgets"
 slug:  "/projects/wp-plugin__admin-widgets"
 date:  "2020-08-16"
-title: "Admin iFrame Widgets"
+title: "Admin Custom Widgets"
 icon:  "wordpress"
 desc:  "Create admin widgets for the wordpress dashboard. "
 ---
