--- a/wp-plugin__andyp-plugins/index.mdx
+++ b/wp-plugin__andyp-plugins/index.mdx
@@ -13,7 +13,7 @@ desc:  "Lists all installed AndyP-based (IORoot) plugins with detailed informati
 <div align="center">
 
 <div style="filter: invert(54%) sepia(99%) saturate(388%) hue-rotate(90deg) brightness(95%) contrast(86%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/power-socket-uk.svg" style="width:200px;"/>
+<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/toy-brick-plus.svg" style="width:200px;"/>
 </div>
 
 <h3 align="center">AndyP Plugin Manager</h3>
@@ -25,6 +25,7 @@ desc:  "Lists all installed AndyP-based (IORoot) plugins with detailed informati
 
 ##  1. <a name='TableofContents'></a>Table of Contents
 
+
 * 1. [Table of Contents](#TableofContents)
 * 2. [About The Project](#AboutTheProject)
 	* 2.1. [Built With](#BuiltWith)
@@ -35,6 +36,7 @@ desc:  "Lists all installed AndyP-based (IORoot) plugins with detailed informati
 * 6. [Contributing](#Contributing)
 * 7. [License](#License)
 * 8. [Contact](#Contact)
+
 
 
 ##  2. <a name='AboutTheProject'></a>About The Project
