--- a/wp-theme__londonparkour--v5/index.mdx
+++ b/wp-theme__londonparkour--v5/index.mdx
@@ -8,7 +8,6 @@ desc:  "Version 5 Of LondonParkour.com"
 ---
 
 
-
 <div id="top"></div>
 
 <div align="center">
@@ -38,7 +37,8 @@ desc:  "Version 5 Of LondonParkour.com"
 * 7. [License](#License)
 * 8. [Contact](#Contact)
 * 9. [Changelog](#Changelog)
-	* 9.1. [v2.0.0](#v2.0.0)
+	* 9.1. [New version 5.0.0](#Newversion5.0.0)
+	* 9.2. [Veresion 4.0.0](#Veresion4.0.0)
 
 
 ##  2. <a name='AboutTheProject'></a>About The Project
@@ -68,7 +68,7 @@ These are the steps to get up and running with this theme.
 
 1. Clone the repo into your wordpress plugin folder
     ```sh
-    git clone https://github.com/IORoot/wp-theme__londonparkour--v5 ./wp-content/themes/parkourlabs
+    git clone https://github.com/IORoot/wp-theme__londonparkour--v5 ./wp-content/themes/londonparkour
     ```
 1. Enable the theme in wordpress.
 
@@ -187,11 +187,11 @@ Author Link: [https://github.com/IORoot](https://github.com/IORoot)
 
 ##  9. <a name='Changelog'></a>Changelog
 
-### New version 5.0.0
+###  9.1. <a name='Newversion5.0.0'></a>New version 5.0.0
 
 - TailwindCSS
 - Anime.js
 
-### Veresion 4.0.0
+###  9.2. <a name='Version4.0.0'></a>Version 4.0.0
 
 This can be found at [https://github.com/IORoot/wp-theme__londonparkour--v4](https://github.com/IORoot/wp-theme__londonparkour--v4)
