--- a/IORoot-Website/index.mdx
+++ b/IORoot-Website/index.mdx
@@ -6,12 +6,171 @@ title: "IORoot.com"
 icon:  "gatsby"
 desc:  "This site. Built with Gatsby, Github and Netlify. (and me)."
 ---
-<!-- AUTO-GENERATED-CONTENT:START (STARTER) -->
+
+
+<div id="top"></div>
+
+<div align="center">
+
+<div style="filter: invert(15%) sepia(72%) saturate(6382%) hue-rotate(272deg) brightness(85%) contrast(91%);">
+<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/gatsby.svg" style="width:200px;"/>
+</div>
+
+<h3 align="center">IORoot.com Gatsby Version</h3>
+
 <p align="center">
-  <a href="https://www.gatsbyjs.com">
-    <img alt="Gatsby" src="https://www.gatsbyjs.com/Gatsby-Monogram.svg" width="60" />
-  </a>
-</p>
-<h1 align="center">
-  Gatsby Minimal Theme for IORoot.com
-</h1>
+    Latest installation of IORoot.com. Moving from Ghost to Gatsby.
+</p>    
+</div>
+
+##  1. <a name='TableofContents'></a>Table of Contents
+
+
+* 1. [Table of Contents](#TableofContents)
+* 2. [About The Project](#AboutTheProject)
+	* 2.1. [Built With](#BuiltWith)
+	* 2.2. [Installation](#Installation)
+* 3. [Usage](#Usage)
+* 4. [ Customising](#Customising)
+* 5. [Troubleshooting](#Troubleshooting)
+* 6. [Contributing](#Contributing)
+* 7. [License](#License)
+* 8. [Contact](#Contact)
+* 9. [Changelog](#Changelog)
+	* 9.1. [Version 0.0.1](#Version0.0.1)
+
+
+
+##  2. <a name='AboutTheProject'></a>About The Project
+
+IORoot.com is a simple gatsby instance that works with MDX. 
+
+It has two sources of data:
+
+1. The `blog` repository.
+2. The `projects` folder within this repository.
+
+The `blog` repository it built through two methods. 
+
+Firstly, there are manually create posted (numbered from 001 onwards). These contitute the blog posts on the homepage.
+
+Secondly, that repository has a github action that scrapes all of my other github repositories for their `README.md` files. These become all of the projects.
+
+There is a simple frontmatter at the top of each MDX file that is then rendered with the logo/colour of that project. 
+
+The logo comes from materialicons and simpleicons.com.
+
+This also uses Tailwind for styling.
+
+Hosted on Netlify.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+###  2.1. <a name='BuiltWith'></a>Built With
+
+This project was built with the following frameworks, technologies and software.
+
+* [Gatsby](https://www.gatsbyjs.com/)
+* [Tailwind](https://www.tailwindcss.com/)
+* [SimpleIcons](https://simpleicons.org/)
+* [MaterialIcons](https://petershaggynoble.github.io/MDI-Sandbox/)
+* [Github](https://github.com)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+###  2.2. <a name='Installation'></a>Installation
+
+These are the steps to get up and running with this theme.
+
+1. Clone the repo
+    ```sh
+    git clone ttps://github.com/IORoot/IORoot-Website 
+    ```
+2. NPM Install
+  ```sh
+  npm install
+  ```
+3. Run gatsby
+  ```sh
+  gatsby develop
+  ```
+
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  3. <a name='Usage'></a>Usage
+
+No usage required.
+
+##  4. <a name='Customising'></a> Customising
+
+Edit the theme however you wish.
+
+##  5. <a name='Troubleshooting'></a>Troubleshooting
+
+This is purely for Parkour Syllabus. No troubleshooting.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  6. <a name='Contributing'></a>Contributing
+
+Contributions are what make the open source community such an amazing place to learn, inspire, and create. Any contributions you make are **greatly appreciated**.
+
+If you have a suggestion that would make this better, please fork the repo and create a pull request. You can also simply open an issue.
+Don't forget to give the project a star! Thanks again!
+
+1. Fork the Project
+2. Create your Feature Branch (`git checkout -b feature/AmazingFeature`)
+3. Commit your Changes (`git commit -m 'Add some AmazingFeature'`)
+4. Push to the Branch (`git push origin feature/AmazingFeature`)
+5. Open a Pull Request
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  7. <a name='License'></a>License
+
+Distributed under the MIT License.
+
+MIT License
+
+Copyright (c) 2022 Andy Pearson
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  8. <a name='Contact'></a>Contact
+
+Author Link: [https://github.com/IORoot](https://github.com/IORoot)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+##  9. <a name='Changelog'></a>Changelog
+
+###  9.1. <a name='Version0.0.1'></a>Version 1.0.0
+
+- Initial Gatsby Release
