--- a/wp-plugin__cpt--syllabus/index.mdx
+++ b/wp-plugin__cpt--syllabus/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__cpt--syllabus"
 slug:  "/projects/wp-plugin__cpt--syllabus"
 date:  "2021-11-19"
-title: "CPT : syllabus"
+title: "CPT : Syllabus"
 icon:  "wordpress"
 desc:  "Custom Post Type : Syllabus"
 ---
