--- a/SVGencode/index.mdx
+++ b/SVGencode/index.mdx
@@ -13,7 +13,7 @@ desc:  "A simple tool to convert an SVG into different formats, ready for use in
 <div align="center">
 
 <div style="filter: invert(63%) sepia(30%) saturate(6937%) hue-rotate(15deg) brightness(96%) contrast(97%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/svg.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fsvg.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">SVGEncoder.com Website</h3>
