--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -10,6 +10,19 @@ desc:  "Markdown content source for IORoot.com"
 
 These are all my projects and posts for IORoot.com
 
+## SVG Colour
+
+- https://github.com/simple-icons/simple-icons/discussions/6895
+- https://github.com/sachinraja/svg-rewriter
+
+Using this cloudflare worker, you can apply colour to SVGs:
+Example:
+https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fpalette.svg&fill=orange&width=200px&height=200px
+
+
+Alternative maybe to use: https://docs.iconify.design/api/
+
+
 ## Github actions
 
 ### repo_readmes.yml
