--- a/IORoot-Website/index.mdx
+++ b/IORoot-Website/index.mdx
@@ -12,7 +12,7 @@ desc:  "This site. Built with Gatsby, Github and Netlify. (and me)."
 <div align="center">
 
 <div style="filter: invert(15%) sepia(72%) saturate(6382%) hue-rotate(272deg) brightness(85%) contrast(91%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/gatsby.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fgatsby.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">IORoot.com Gatsby Version</h3>
