--- a/macos__colorpicker--palettes/index.mdx
+++ b/macos__colorpicker--palettes/index.mdx
@@ -12,7 +12,7 @@ desc:  "🌈 MacOS Color Palettes in Apple .CLR and .JSON formats. TailwindCSS, 
 <div align="center">
 
 <div style="filter: invert(88%) sepia(22%) saturate(1487%) hue-rotate(104deg) brightness(92%) contrast(80%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/palette.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fpalette.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">🌈 Apple CLR Palettes</h3>
