--- a/wp-plugin__acf-options-import-export/index.mdx
+++ b/wp-plugin__acf-options-import-export/index.mdx
@@ -13,7 +13,7 @@ desc:  "Allows you to import and export ACF options directly from the database. 
 <div align="center">
 
 <div style="filter: invert(72%) sepia(53%) saturate(4524%) hue-rotate(125deg) brightness(106%) contrast(101%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/swap-vertical-bold.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fswap-vertical-bold.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">ACF options importer/exporter</h3>
