--- a/wp-plugin__admin--remove-comments/index.mdx
+++ b/wp-plugin__admin--remove-comments/index.mdx
@@ -14,7 +14,7 @@ desc:  "Removes the Wordpress 'Comments' menu option."
 <div align="center">
 
 <div style="filter: invert(37%) sepia(37%) saturate(800%) hue-rotate(154deg) brightness(99%) contrast(100%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/comment-remove.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcomment-remove.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">Remove 'Comments' Admin Menu</h3>
