--- a/wp-plugin__admin-themes/index.mdx
+++ b/wp-plugin__admin-themes/index.mdx
@@ -12,7 +12,7 @@ desc:  "Switch CSS themes depending on which website admin panel being used"
 <div align="center">
 
 <div style="filter: invert(13%) sepia(70%) saturate(4844%) hue-rotate(262deg) brightness(96%) contrast(96%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/compare.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcompare.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">Admin Theme Switcher</h3>
