--- a/wp-plugin__footer/index.mdx
+++ b/wp-plugin__footer/index.mdx
@@ -13,7 +13,7 @@ desc:  "ACF-based panel to allow you to select a specific page for your footer."
 <div align="center">
 
 <div style="filter: invert(96%) sepia(12%) saturate(1589%) hue-rotate(343deg) brightness(98%) contrast(105%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/page-layout-footer.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fpage-layout-footer.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">Select Page as Global Footer</h3>
