--- a/wp-plugin__gcal-sync/index.mdx
+++ b/wp-plugin__gcal-sync/index.mdx
@@ -13,7 +13,7 @@ desc:  "Google Calendar to Wordpress sync. Adds posts per calendar event."
 <div align="center">
 
 <div style="filter: invert(36%) sepia(76%) saturate(5503%) hue-rotate(217deg) brightness(97%) contrast(89%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/calendar-month.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcalendar-month.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">Google Calendar Sync</h3>
