--- a/wp-plugin__oauth--gCAL/index.mdx
+++ b/wp-plugin__oauth--gCAL/index.mdx
@@ -11,8 +11,8 @@ desc:  "ACF oAuth Button for google Calendar"
 
 <div align="center">
 
-<div style="filter: invert(26%) sepia(47%) saturate(3997%) hue-rotate(347deg) brightness(73%) contrast(98%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/calendar-month.svg" style="width:200px;"/>
+<div>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fcalendar-month.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">Google Calendar OAuth Button</h3>
