--- a/wp-theme__londonparkour--v4/index.mdx
+++ b/wp-theme__londonparkour--v4/index.mdx
@@ -12,7 +12,7 @@ desc:  "Wordpress theme for LondonParkour. Uses _underscores."
 <div align="center">
 
 <div style="filter: invert(55%) sepia(83%) saturate(823%) hue-rotate(171deg) brightness(105%) contrast(94%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/diving-scuba-flag.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fdiving-scuba-flag.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">LondonParkour.com v4 (2019) Wordpress Theme</h3>
