--- a/wp-theme__pulse/index.mdx
+++ b/wp-theme__pulse/index.mdx
@@ -12,7 +12,7 @@ desc:  "ParkourPulse Wordpress Theme."
 <div align="center">
 
 <div style="filter: invert(54%) sepia(90%) saturate(2496%) hue-rotate(350deg) brightness(98%) contrast(98%);">
-<img src="https://cdn.jsdelivr.net/npm/@mdi/svg@6.7.96/svg/pulse.svg" style="width:200px;"/>
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fpulse.svg&fill=%23B91C1C&width=200px&height=200px" style="width:200px;"/>
 </div>
 
 <h3 align="center">ParkourPulse.com Wordpress Theme</h3>
