--- a/archive__dead-projects/index.mdx
+++ b/archive__dead-projects/index.mdx
@@ -6,11 +6,69 @@ title: "Dead Projects Archive."
 icon:  "github"
 desc:  "This is where all the repos, code and projects I've written over the years that I no longer use lives."
 ---
-# archive__dead-projects
 
-This is where all the repos, code and projects I've written over the years that I no longer use lives.
 
-## Usage:
+<div id="top"></div>
+
+<div align="center">
+
+
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fskull-crossbones-outline.svg&fill=%231E293B&width=200px&height=200px" style="width:200px;"/>
+
+<h3 align="center">Dead Projects Archive</h3>
+
+<p align="center">
+    This is where all the repos, code and projects I've written over the years that I no longer use lives.
+</p>    
+</div>
+
+##  1. <a name='TableofContents'></a>Table of Contents
+
+
+* 1. [Table of Contents](#TableofContents)
+* 2. [About The Project](#AboutTheProject)
+	* 2.1. [Built With](#BuiltWith)
+	* 2.2. [Installation](#Installation)
+* 3. [Usage](#Usage)
+* 4. [ Customising](#Customising)
+* 5. [Troubleshooting](#Troubleshooting)
+* 6. [Contributing](#Contributing)
+* 7. [License](#License)
+* 8. [Contact](#Contact)
+* 9. [Changelog](#Changelog)
+
+
+
+##  2. <a name='AboutTheProject'></a>About The Project
+
+This is where all of my older projects live. Instead of archiving them, I like to keep them in this repository.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+###  2.1. <a name='BuiltWith'></a>Built With
+
+This project was built with the following frameworks, technologies and software.
+
+* [Github](https://github.com/)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+###  2.2. <a name='Installation'></a>Installation
+
+These are the steps to get up and running with this code.
+
+1. Clone the repo into your wordpress plugin folder
+    ```sh
+    git clone https://github.com/IORoot/archive__dead-projects
+    ```
+
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  3. <a name='Usage'></a>Usage
 
 1. Clone this project.
 2. Clone the dead project into it.
@@ -18,3 +76,70 @@ This is where all the repos, code and projects I've written over the years that 
 4. Delete github repo of dead project.
 5. Delete local copies of both dead project and this repo.
 
+##  4. <a name='Customising'></a> Customising
+
+None.
+
+##  5. <a name='Troubleshooting'></a>Troubleshooting
+
+None.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  6. <a name='Contributing'></a>Contributing
+
+Contributions are what make the open source community such an amazing place to learn, inspire, and create. Any contributions you make are **greatly appreciated**.
+
+If you have a suggestion that would make this better, please fork the repo and create a pull request. You can also simply open an issue.
+Don't forget to give the project a star! Thanks again!
+
+1. Fork the Project
+2. Create your Feature Branch (`git checkout -b feature/AmazingFeature`)
+3. Commit your Changes (`git commit -m 'Add some AmazingFeature'`)
+4. Push to the Branch (`git push origin feature/AmazingFeature`)
+5. Open a Pull Request
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  7. <a name='License'></a>License
+
+Distributed under the MIT License.
+
+MIT License
+
+Copyright (c) 2022 Andy Pearson
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  8. <a name='Contact'></a>Contact
+
+Author Link: [https://github.com/IORoot](https://github.com/IORoot)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+##  9. <a name='Changelog'></a>Changelog
+
+- v1.0.0 - Initial Commit
