--- a/github-action__puppeteer--video/index.mdx
+++ b/github-action__puppeteer--video/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/github-action__puppeteer--video"
 slug:  "/projects/github-action__puppeteer--video"
 date:  "2021-08-17"
-title: "github-action__puppeteer--video"
-icon:  "shell"
+title: "Github Action puppeteer +Video record."
+icon:  "githubactions"
 desc:  "Github Action to run puppeteer with media/video capabilities. (Default downloaded chrome cannot use video files)"
 ---
 # Javascript / Puppeteer Github Action
