--- a/github-action__scraper--to-netlify/index.mdx
+++ b/github-action__scraper--to-netlify/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/github-action__scraper--to-netlify"
 slug:  "/projects/github-action__scraper--to-netlify"
 date:  "2022-06-24"
-title: "github-action__scraper--to-netlify"
-icon:  "github"
+title: "Static Scraper to Netlify."
+icon:  "githubactions"
 desc:  "Github Action to scrape a website, make a static version and push to netlify."
 ---
 
