--- a/github-action__wordpress--phpunit/index.mdx
+++ b/github-action__wordpress--phpunit/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/github-action__wordpress--phpunit"
 slug:  "/projects/github-action__wordpress--phpunit"
 date:  "2020-11-30"
-title: "github-action__wordpress--phpunit"
-icon:  "php"
+title: "CI WordPress deployment example"
+icon:  "githubactions"
 desc:  "A Github Action workflow to run WordPress, PHPUnit, MySQL and pull in a second private repo"
 ---
 
