--- a/github-action__puppeteer--video/index.mdx
+++ b/github-action__puppeteer--video/index.mdx
@@ -2,25 +2,75 @@
 repo: "https://github.com/IORoot/github-action__puppeteer--video"
 slug:  "/projects/github-action__puppeteer--video"
 date:  "2021-08-17"
-title: "Github Action puppeteer +Video record."
+title: "Puppeteer +Video record."
 icon:  "githubactions"
 desc:  "Github Action to run puppeteer with media/video capabilities. (Default downloaded chrome cannot use video files)"
 ---
-# Javascript / Puppeteer Github Action
+
+
+<div id="top"></div>
+
+<div align="center">
+
+
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fgoogle-chrome.svg&fill=%2386EFAC&width=200px&height=200px" style="width:200px;"/>
+
+<h3 align="center">Javascript / Puppeteer Github Action</h3>
+
+<p align="center">
+Github Action to run puppeteer with media/video capabilities.
+</p>    
+</div>
+
+##  1. <a name='TableofContents'></a>Table of Contents
+
+
+
+* 1. [Table of Contents](#TableofContents)
+* 2. [About The Project](#AboutTheProject)
+	* 2.1. [Built With](#BuiltWith)
+	* 2.2. [Installation](#Installation)
+	* 2.3. [New Repository & Package.json](#NewRepositoryPackage.json)
+	* 2.4. [Your puppeteer script.](#Yourpuppeteerscript.)
+	* 2.5. [Github Action](#GithubAction)
+	* 2.6. [package.json 'scripts'](#package.jsonscripts)
+* 3. [Usage](#Usage)
+* 4. [ Customising](#Customising)
+* 5. [Troubleshooting](#Troubleshooting)
+	* 5.1. [Note about Video Codecs in Chromium.](#NoteaboutVideoCodecsinChromium.)
+* 6. [Contributing](#Contributing)
+* 7. [License](#License)
+* 8. [Contact](#Contact)
+* 9. [Changelog](#Changelog)
+
+
+
+##  2. <a name='AboutTheProject'></a>About The Project
+
 
 This github action was born out of slight frustration that:
 
 1. The chromium version that puppeteer uses does not have video codecs installed.
 2. Most of the puppeteer actions on the marketplace lack any decent documentation. Which meant it was hard to get anything running.
 
-## Demo Usage Repository
+<p align="right">(<a href="#top">back to top</a>)</p>
 
-You can see a demonstration of this action in use at: 
-https://github.com/IORoot/puppeteer__runner--demo
 
-## How to get it to work?
+###  2.1. <a name='BuiltWith'></a>Built With
 
-### New Repository & Package.json
+This project was built with the following frameworks, technologies and software.
+
+* [Puppeteer](https://pptr.dev/api)
+* [Puppeteer](https://github.com/puppeteer/puppeteer)
+* [Github](https://github.com/)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+###  2.2. <a name='Installation'></a>Installation
+
+
+###  2.3. <a name='NewRepositoryPackage.json'></a>New Repository & Package.json
 
 Create a new github repository and include a package.json file.
 
@@ -44,7 +94,7 @@ In the dependencies, you will want to include 'puppeteer-core',
 }
 ```
 
-### Your puppeteer script.
+###  2.4. <a name='Yourpuppeteerscript.'></a>Your puppeteer script.
 
 Next, you'll want to include your own script that will run puppeteer and do whatever
 it is you want it to do.
@@ -72,7 +122,7 @@ You should now be able to run your puppeteer steps in your script.
 
 
 
-### Github Action
+###  2.5. <a name='GithubAction'></a>Github Action
 
 Lastly, to run the whole process, you need to create a github action workflow file.
 
@@ -115,7 +165,7 @@ jobs:
 ```
 
 
-### package.json 'scripts'
+###  2.6. <a name='package.jsonscripts'></a>package.json 'scripts'
 
 Instead of running the `node myscript.js` in the 'args', you could transfer the execution
 into the package.json like so:
@@ -147,7 +197,21 @@ You could then run `npm run start` as the command in 'args'.
 ```
 
 
-## Note about Video Codecs in Chromium.
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  3. <a name='Usage'></a>Usage
+
+Github Actions.
+
+##  4. <a name='Customising'></a> Customising
+
+None.
+
+##  5. <a name='Troubleshooting'></a>Troubleshooting
+
+
+###  5.1. <a name='NoteaboutVideoCodecsinChromium.'></a>Note about Video Codecs in Chromium.
 
 IMPORTANT - Some puppeteer scripts will not run correctly when using a version of chromium that
 has NOT been compiled with the video/audio codecs. Chrome comes with them as standard
@@ -185,3 +249,62 @@ version was required.
  */
  ```
 
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  6. <a name='Contributing'></a>Contributing
+
+Contributions are what make the open source community such an amazing place to learn, inspire, and create. Any contributions you make are **greatly appreciated**.
+
+If you have a suggestion that would make this better, please fork the repo and create a pull request. You can also simply open an issue.
+Don't forget to give the project a star! Thanks again!
+
+1. Fork the Project
+2. Create your Feature Branch (`git checkout -b feature/AmazingFeature`)
+3. Commit your Changes (`git commit -m 'Add some AmazingFeature'`)
+4. Push to the Branch (`git push origin feature/AmazingFeature`)
+5. Open a Pull Request
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  7. <a name='License'></a>License
+
+Distributed under the MIT License.
+
+MIT License
+
+Copyright (c) 2022 Andy Pearson
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  8. <a name='Contact'></a>Contact
+
+Author Link: [https://github.com/IORoot](https://github.com/IORoot)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+##  9. <a name='Changelog'></a>Changelog
+
+- v1.0.0 - Initial Commit
