--- a/github-action__wordpress--phpunit/index.mdx
+++ b/github-action__wordpress--phpunit/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/github-action__wordpress--phpunit"
 slug:  "/projects/github-action__wordpress--phpunit"
 date:  "2020-11-30"
-title: "CI WordPress deployment example"
+title: "WordPress deployment example"
 icon:  "githubactions"
 desc:  "A Github Action workflow to run WordPress, PHPUnit, MySQL and pull in a second private repo"
 ---
