Revert "lighthouse testing"
This reverts commit cf8a73a4aa1ff5b201a27137f9d7ae0ccf15d735.

--- a/run__lighthouse/index.mdx
+++ b/run__lighthouse/index.mdx
@@ -1,9 +1,9 @@
 ---
-repo: "https://github.com/IORoot/github-action__cron-lighthouse"
-slug:  "/projects/github-action__cron-lighthouse"
+repo: "https://github.com/IORoot/run__lighthouse"
+slug:  "/projects/run__lighthouse"
 date:  "2021-09-03"
-title: "github-action__cron-lighthouse"
-icon:  "github"
+title: "Lighthouse on Crontab"
+icon:  "githubactions"
 desc:  "Runs Lighthouse against URLs - Saves to server."
 ---
 
