--- a/wp-theme__londonparkour--v5/index.mdx
+++ b/wp-theme__londonparkour--v5/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-theme__londonparkour--v5"
 slug:  "/projects/wp-theme__londonparkour--v5"
 date:  "2021-04-12"
 title: "WP Theme : LondonParkour.com v5"
-icon:  "digitalocean"
+icon:  "html5"
 desc:  "Version 5 Of LondonParkour.com"
 ---
 
