--- a/wp-theme__pulse/index.mdx
+++ b/wp-theme__pulse/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/wp-theme__pulse"
 slug:  "/projects/wp-theme__pulse"
 date:  "2021-09-09"
 title: "WP Theme : ParkourPulse.com"
-icon:  "digitalocean"
+icon:  "html5"
 desc:  "ParkourPulse Wordpress Theme."
 ---
 
