--- a/github-action__cron-lighthouse/index.mdx
+++ b/github-action__cron-lighthouse/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/github-action__cron-lighthouse"
 slug:  "/projects/github-action__cron-lighthouse"
 date:  "2021-09-03"
 title: "github-action__cron-lighthouse"
-icon:  "github"
+icon:  "githubactions"
 desc:  "Runs Lighthouse against URLs - Saves to server."
 ---
 
