--- a/github-action__puppeteer--later.com/index.mdx
+++ b/github-action__puppeteer--later.com/index.mdx
@@ -3,7 +3,7 @@ repo: "https://github.com/IORoot/github-action__puppeteer--later.com"
 slug:  "/projects/github-action__puppeteer--later-com"
 date:  "2021-08-17"
 title: "Later.com Puppeteer Script"
-icon:  "javascript"
+icon:  "githubactions"
 desc:  "Run a puppeteer script to schedule a video on later.com"
 ---
 
