page-builder plugins

--- a/wp-plugin__page-builder--flickity/index.mdx
+++ b/wp-plugin__page-builder--flickity/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__page-builder--flickity"
 slug:  "/projects/wp-plugin__page-builder--flickity"
 date:  "2021-01-11"
-title: "wp-plugin__page-builder--flickity"
+title: "Page Builder : Flickity Slider"
 icon:  "wordpress"
 desc:  "Metafizzy Flickity slider module for page builder."
 ---
@@ -39,7 +39,9 @@ desc:  "Metafizzy Flickity slider module for page builder."
 
 ##  2. <a name='AboutTheProject'></a>About The Project
 
-ACF-Based panels to allow you to create shortcodes for flickity sliders.
+![https://github.com/IORoot/wp-plugin__page-builder--flickity/blob/master/files/docs/flickity-slider.png?raw=true](https://github.com/IORoot/wp-plugin__page-builder--flickity/blob/master/files/docs/flickity-slider.png?raw=true)
+
+ACF-Based panels to allow you build flickity sliders.
 
 <p align="right">(<a href="#top">back to top</a>)</p>
 
