--- a/wp-plugin__generative-images/index.mdx
+++ b/wp-plugin__generative-images/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__generative-images"
 slug:  "/projects/wp-plugin__generative-images"
 date:  "2020-03-29"
-title: "SVG Generative Images"
+title: "Pipeline : SVG Generative Images"
 icon:  "wordpress"
 desc:  "Generate SVG images based on featured images."
 ---
@@ -16,7 +16,7 @@ desc:  "Generate SVG images based on featured images."
 <h3 align="center">Generative Images for Wordpress posts</h3>
 
 <p align="center">
-Create and generate SVG images using the featured image as a base.
+Create and generate SVG images using the featured image as a base. Part of the Pipeline project.
 </p>    
 </div>
 
@@ -67,8 +67,6 @@ Create and generate SVG images using the featured image as a base.
 
 
 ##  2. <a name='AboutTheProject'></a>About The Project
-
-
 
 This is highly cowboy-coded plugin I created to enable me to manipulate all of my post images. The premise was to be able to automatically alter ALL posts/CPT/Taxonomy featured images in some way to give them a more consistent tone and feel. This plugin does that through SVGs and conversion. Note that I have 'articles' CPT with 'articlecategory' and 'articletags' as taxonomy and terms. The code may have references to these. Like I said, this was a personal project... Will need refactoring.
 
