--- a/wp-plugin__api-scraper/index.mdx
+++ b/wp-plugin__api-scraper/index.mdx
@@ -2,7 +2,7 @@
 repo: "https://github.com/IORoot/wp-plugin__api-scraper"
 slug:  "/projects/wp-plugin__api-scraper"
 date:  "2019-10-28"
-title: "YouTube API Scraper"
+title: "Pipeline : YouTube API Scraper"
 icon:  "wordpress"
 desc:  "API Scraper that will allow you to get data from YouTube and output the results however you like."
 ---
@@ -15,10 +15,10 @@ desc:  "API Scraper that will allow you to get data from YouTube and output the 
 
 <img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fyoutube.svg&fill=%23DC2626&width=200px&height=200px" style="width:200px;"/>
 
-<h3 align="center">Wordpress API Scraper for YouTube</h3>
+<h3 align="center">Pipeline : Wordpress API Scraper for YouTube</h3>
 
 <p align="center">
-    Predominantly built for interacting with the youtube API. This plugin is what runs parkourpulse.com
+    Predominantly built for interacting with the youtube API. Part of the Pipeline project.
 </p>    
 </div>
 
