--- a/wp-plugin__pipeline--api-scraper/index.mdx
+++ b/wp-plugin__pipeline--api-scraper/index.mdx
@@ -2,9 +2,9 @@
 repo: "https://github.com/IORoot/wp-plugin__pipeline--api-scraper"
 slug:  "/projects/wp-plugin__pipeline--api-scraper"
 date:  "2019-10-28"
-title: "wp-plugin__pipeline--api-scraper"
-icon:  "shell"
-desc:  "API Scraper Wordpress plugin that will allow you to get data from YouTube and output the results as you like."
+title: "Pipeline : YouTube API Scraper"
+icon:  "wordpress"
+desc:  "API Scraper that will allow you to get data from YouTube and output the results however you like."
 ---
 
 <div id="top"></div>
@@ -21,7 +21,6 @@ desc:  "API Scraper Wordpress plugin that will allow you to get data from YouTub
 </div>
 
 ##  1. <a name='TableofContents'></a>Table of Contents
-
 
 
 * 1. [Table of Contents](#TableofContents)
