--- a/wp-plugin__pipeline--generative-images/index.mdx
+++ b/wp-plugin__pipeline--generative-images/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/wp-plugin__pipeline--generative-images"
 slug:  "/projects/wp-plugin__pipeline--generative-images"
 date:  "2020-03-29"
-title: "wp-plugin__pipeline--generative-images"
-icon:  "shell"
+title: "Pipeline : SVG Generative Images"
+icon:  "wordpress"
 desc:  "Generate SVG images based on featured images."
 ---
 
