--- a/wp-plugin__pipeline--exporter/index.mdx
+++ b/wp-plugin__pipeline--exporter/index.mdx
@@ -6,41 +6,113 @@ title: "Pipeline : Exporter"
 icon:  "wordpress"
 desc:  "Pipeline Project - Exporter"
 ---
-# Install
+
+<div id="top"></div>
+
+<div align="center">
+
+<img src="https://svg-rewriter.sachinraja.workers.dev/?url=https%3A%2F%2Fcdn.jsdelivr.net%2Fnpm%2F%40mdi%2Fsvg%406.7.96%2Fsvg%2Fexport.svg&fill=%23A855F7&width=200px&height=200px" style="width:200px;"/>
+
+<h3 align="center">Pipeline : Exporter</h3>
+
+<p align="center">
+    Output results of the pipeline project to 3rd party services. Google-my-business and Youtube. Part of the Pipeline Project.
+</p>    
+</div>
+
+##  1. <a name='TableofContents'></a>Table of Contents
+
+
+* 1. [Table of Contents](#TableofContents)
+* 2. [About The Project](#AboutTheProject)
+	* 2.1. [Built With](#BuiltWith)
+	* 2.2. [Installation](#Installation)
+* 3. [Usage](#Usage)
+	* 3.1. [Steps before activating AUTH plugins](#StepsbeforeactivatingAUTHplugins)
+	* 3.2. [Check](#Check)
+	* 3.3. [Google My Business](#GoogleMyBusiness)
+	* 3.4. [OAUTH Keys](#OAUTHKeys)
+* 4. [Customising](#Customising)
+* 5. [Troubleshooting](#Troubleshooting)
+	* 5.1. [OAUTH Issues](#OAUTHIssues)
+* 6. [Contributing](#Contributing)
+* 7. [License](#License)
+* 8. [Contact](#Contact)
+* 9. [Changelog](#Changelog)
+
+
+##  2. <a name='AboutTheProject'></a>About The Project
+
+The pipeline project was built to automatically build, process and export generated posts. This plugin is that last part of the process. The exporter connects with various endpoints and APIs to send those generated posts to.
+
+Originally I wanted all social media, but eventually whittled it down to YouTube, Google-My-Business, Trello, Creator Studio and REST Endpoints.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+###  2.1. <a name='BuiltWith'></a>Built With
+
+This project was built with the following frameworks, technologies and software.
+
+* [ACF Pro](https://advancedcustomfields.com/)
+* [Composer](https://getcomposer.org/)
+* [PHP](https://php.net/)
+* [Wordpress](https://wordpress.org/)
 
 You will need the following extra plugins to work:
 
 - HTTPS Must be working on the site / vagrant
-- ACF PRO
-- https://github.com/IORoot/wp-plugin__oauth--YouTube
-- https://github.com/IORoot/wp-plugin__oauth--GMB
-
+- [ACF Pro](https://advancedcustomfields.com/)
+- [https://github.com/IORoot/wp-plugin__oauth--YouTube](https://github.com/IORoot/wp-plugin__oauth--YouTube)
+- [https://github.com/IORoot/wp-plugin__oauth--GMB](https://github.com/IORoot/wp-plugin__oauth--GMB)
 
 These plugins will allow you to do an OAUTH connection to the specific service. They are ACF buttons that will complete the hand-shake 
 with the google APIs.
 
 Thee following plugin will make the code boxes look better.
-- https://github.com/IORoot/wp-plugin__acf--codemirror
+- [https://github.com/IORoot/wp-plugin__acf--codemirror](https://github.com/IORoot/wp-plugin__acf--codemirror)
 
-## Steps before activating AUTH plugins
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+###  2.2. <a name='Installation'></a>Installation
+
+> This was built with ACF PRO - Please make sure it is installed before installing this plugin.
+
+These are the steps to get up and running with this plugin.
+
+1. Clone the repo into your wordpress plugin folder
+    ```bash
+    git clone https://github.com/IORoot/wp-plugin__pipeline--exporter ./wp-content/plugins/pipeline-exporter
+    ```
+1. Activate the plugin.
+
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+##  3. <a name='Usage'></a>Usage
+
+###  3.1. <a name='StepsbeforeactivatingAUTHplugins'></a>Steps before activating AUTH plugins
 
 1. Make sure you do a `composer install` or `composer update` in each before activating 
 1. Also, make sure the `client_secret.json` file is placed in the root of each OAUTH plugin. (See below)
 
 There is a .gitignore on the file `client_secret.json`, so you don't commit it to a repo by accident.
 
-## Check
+###  3.2. <a name='Check'></a>Check
 
 If the auth plugins are working, you will see a new 'LOGIN WITH YOUTUBE' button on authentication tab on the exporter plugin for youtube.
 
-## Google My Business
+###  3.3. <a name='GoogleMyBusiness'></a>Google My Business
 
 Is one of the only client-libraries that is NOT part of the standard `google/apiclient-services`, so you have to download it yourself.
 You can get it here: https://developers.google.com/my-business/samples/previousVersions
 
 Place it into the `/GMB` folder.
 
-## OAUTH Keys
+###  3.4. <a name='OAUTHKeys'></a>OAUTH Keys
 
 Head over the the google console https://console.cloud.google.com/ and create a project with the following APIs:
 
@@ -51,9 +123,15 @@ The google my business API is a private one and you need to request access from 
 
 Create an OAUTH 2.0 client ID and download the `client_secret.json` file: place it into the root of the plugin.
 
-## Troubleshooting
 
-### OAUTH Issues
+
+##  4. <a name='Customising'></a>Customising
+
+Please refer to the [Wiki](https://github.com/IORoot/wp-plugin__api-scraper/wiki)
+
+##  5. <a name='Troubleshooting'></a>Troubleshooting
+
+###  5.1. <a name='OAUTHIssues'></a>OAUTH Issues
 
 
 1. Ensure HTTPS is working. (Make sure cert is created and added to keychain)
@@ -65,8 +143,70 @@ https://dev.exporter.londonparkour.com/wp-admin/admin-ajax.php
 ```
 Preferably at the top of the list.
 
-3. Ensure `Authorised JavaScript origins` in the google console APIs 'credentials' has the 
+3. Ensure `Authorised JavaScript origins` in the google console APIs 'credentials' has your correct domain. 
 domain:
+e.g.
 ```
 https://dev.exporter.londonparkour.com
 ```
+
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+##  6. <a name='Contributing'></a>Contributing
+
+Contributions are what make the open source community such an amazing place to learn, inspire, and create. Any contributions you make are **greatly appreciated**.
+
+If you have a suggestion that would make this better, please fork the repo and create a pull request. You can also simply open an issue.
+Don't forget to give the project a star! Thanks again!
+
+1. Fork the Project
+2. Create your Feature Branch (`git checkout -b feature/AmazingFeature`)
+3. Commit your Changes (`git commit -m 'Add some AmazingFeature'`)
+4. Push to the Branch (`git push origin feature/AmazingFeature`)
+5. Open a Pull Request
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  7. <a name='License'></a>License
+
+Distributed under the MIT License.
+
+MIT License
+
+Copyright (c) 2022 Andy Pearson
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+
+
+##  8. <a name='Contact'></a>Contact
+
+Author Link: [https://github.com/IORoot](https://github.com/IORoot)
+
+<p align="right">(<a href="#top">back to top</a>)</p>
+
+##  9. <a name='Changelog'></a>Changelog
+
+- v1.0.0 - Initial Commit
