--- a/docker__puppeteer--facebook/index.mdx
+++ b/docker__puppeteer--facebook/index.mdx
@@ -2,8 +2,8 @@
 repo: "https://github.com/IORoot/docker__puppeteer--facebook"
 slug:  "/projects/docker__puppeteer--facebook"
 date:  "2022-07-10"
-title: "docker__puppeteer--facebook"
-icon:  "javascript"
+title: "Dockerised Puppeteer post to Creator Studio"
+icon:  "docker"
 desc:  "A container that runs puppeteer to login into facebook creator studio and schedule a video post to Instagram and Facebook."
 ---
 <div id="top"></div>
